# project-template

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt
cmake/: nautilus_configuration.cmake  nautilus_definition.cmake  nautilus_option.cmake  nautilus_platform.cmake  nautilus_policy.cmake  nautilus_tool.cmake  nautilus_tools.cmake
cmake/configuration/: nautilus_compiler.cmake  nautilus_generator.cmake  nautilus_linker.cmake  nautilus_precompile_header.cmake  nautilus_sanitizer.cmake
cmake/definition/: nautilus_defvar.cmake  nautilus_option.cmake  nautilus_override.cmake
cmake/tool/: nautilus_coverage.cmake  nautilus_launcher.cmake  nautilus_lint.cmake  nautilus_sanitizer.cmake
cmake/tools/: nautilus_cache.cmake  nautilus_coverage.cmake
